@@ -20,6 +20,7 @@
   Vanderburg). 
 * Added rake_extension to handle detection of extension collisions.
 * Added test for noop, bad_option and verbose flags to sh command.
+* Removed dependency on internal fu_xxx functions from FileUtils.
 
 == Version 0.7.1
 
